--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <title>Weather Journal</title>
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -25,13 +24,12 @@
         <div class="holder entry">
             <div class="title">Most Recent Entry</div>
             <div id="entryHolder">
-                <div id="date"></div>
-                <div id="temp"></div>
-                <div id="content"></div>
+                <div id="lat"></div>
+                <div id="lon"></div>
+                <div id="country"></div>
             </div>
         </div>
     </div>
-    <script src="app.js" type="text/javascript"></script>
 
 </body>
 
