fix: get lat/lng/country

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -25,7 +25,7 @@
             <div class="title">Most Recent Entry</div>
             <div id="entryHolder">
                 <div id="lat"></div>
-                <div id="lon"></div>
+                <div id="lng"></div>
                 <div id="country"></div>
             </div>
         </div>
