--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -16,6 +16,11 @@
             <label for="zip">Enter Zipcode here</label>
             <input type="text" id="zip" placeholder="enter zip code here">
         </div>
+        <div id="time">
+            <label for="trip-date">Enter the date of the trip here</label>
+            <input id="trip-date" type="date" name="start of trip">
+            <button id="time-submit" type="submit">Submit</button>
+        </div>
         <div class="holder feel">
             <label for="feelings">How are you feeling today?</label>
             <textarea class="myInput" id="feelings" placeholder="Enter your feelings here" rows="9" cols="50"></textarea>
