--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -20,6 +20,7 @@
             <label for="trip-date">Enter the date of the trip here</label>
             <input id="trip-date" type="date" name="start of trip">
             <button id="time-submit" type="submit">Submit</button>
+            <div id="days-till-trip"></div>
         </div>
         <div class="holder feel">
             <label for="feelings">How are you feeling today?</label>
