feat: add getWeatherForeCast

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="holder feel">
             <label for="feelings">How are you feeling today?</label>
-            <textarea class="myInput" id="feelings" placeholder="Enter your feelings here" rows="9" cols="50"></textarea>
+            <textarea class="myInput" id="feelings" placeholder="Enter your feelings here" rows="1" cols="50"></textarea>
             <button id="generate" type="submit"> Generate </button>
         </div>
         <div class="holder entry">
@@ -33,6 +33,14 @@
                 <div id="lat"></div>
                 <div id="lng"></div>
                 <div id="country"></div>
+            </div>
+        </div>
+        <div class="forecast">
+            <div class="forecast-title">Weather forecast</div>
+            <div id="forecast-entries">
+                <div id="high"></div>
+                <div id="low"></div>
+                <div id="description"></div>
             </div>
         </div>
     </div>
