feat: add getImage

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -33,6 +33,10 @@
                 <div id="lat"></div>
                 <div id="lng"></div>
                 <div id="country"></div>
+                <div id="city"></div>
+                <div>
+                    <img id="city-image" src="" width="150">
+                </div>
             </div>
         </div>
         <div class="forecast">
