feat: display trip length

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -20,7 +20,7 @@
             <label for="trip-date">Enter the start date your trip.</label>
             <input id="trip-date" type="date" name="start of trip">
             <div id="days-till-trip"></div>
-            <label id="trip-end">Enter the end date of your trip.</label>
+            <label for="trip-end">Enter the end date of your trip.</label>
             <input id="trip-end" type="date" name="end of trip">
             <div id="trip-length"></div>
             <button id="time-submit" type="submit">Submit</button>
