--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Weather Journal</title>
-    <link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -30,24 +29,20 @@
             <button id="generate" type="submit"> Generate </button>
         </div>
         <div class="holder entry">
-            <div class="title">Most Recent Entry</div>
-            <div id="entryHolder">
-                <div id="lat"></div>
-                <div id="lng"></div>
-                <div id="country"></div>
-                <div id="city"></div>
-                <div>
-                    <img id="city-image" src="" width="150">
-                </div>
+            <div class="title" style="font-size: larger;">Location infos</div>
+            <div id="lat"></div>
+            <div id="lng"></div>
+            <div id="country"></div>
+            <div id="city"></div>
+            <div>
+                <img id="city-image" src="" width="150">
             </div>
         </div>
-        <div class="forecast">
-            <div class="forecast-title">Weather forecast</div>
-            <div id="forecast-entries">
-                <div id="high"></div>
-                <div id="low"></div>
-                <div id="description"></div>
-            </div>
+        <div class="forecast-title" style="font-size: larger;">Weather forecast</div>
+        <div id="forecast-entries">
+            <div id="high"></div>
+            <div id="low"></div>
+            <div id="description"></div>
         </div>
     </div>
 
